udating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Univeristy of Arizona graduate with a degree in Linguistics.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Tucson, AZ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy watching Netflix and studying languages.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is one where I can use my language skills.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I still live in my hometown of Tucson, AZ.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to work in an environment that is both challenging and rewarding.</p>
     </section>
 
     <footer id="footer">
